Improving build script. Making IDE's complain less.